GD Listings widget special offers option is missing - FIXED
Post badge external urls are now nofollow - CHANGED
Slider carousel images now use thumbnail size for consistency - CHANGED
GD listings widget now has option to filter by default_category only - ADDED
GD listings widget now has option to filter post IDs - ADDED
HTML custom field stripping html tags from default value - FIXED

v2.0.0.43
Post badge and is_empty check not working in some cases - FIXED
Post badge post_class now also adds class with condition - ADDED
Permalinks category base now required to keep permalinks to WordPress standards and avoid conflicts - CHANGED

v2.0.0.42
Selecting detail custom page template shows comment box twice - FIXED
Added editor styles to help Gutenberg Blocks UI - ADDED
Newly added Blocks have checkbox values ticked by default even if not set to do so - FIXED
OSM sometimes not loading automatically in countries where Google is blocked - FIXED
Cannot un-select all tags in add listing form - FIXED
User avatar overlaps some text in dashboard recent reviews widget - FIXED
Save custom field generates incorrect field key if not inserted - FIXED
On page refresh detail page map not loading if map tab is active - FIXED
404 rescue function sometimes not picking up a post_type from query vars - FIXED
Added geodirectory-single.php as option to override single template - ADDED
Post badge now has option to open link in new window and input or class wrapper - ADDED
Changes for Marker Cluster addon v2 - ADDED

v2.0.0.41
GD Listings widget sorting not showing custom sorting options - FIXED
Category import does not assign parent category - FIXED
Full screen map not working properly - FIXED
Archive item section block not working as its being wrapped in a div - FIXED
Some changes for Elementor page builder compatibility added - ADDED


v2.0.0.40
Font Awesome Setting class updated to check if url is CSS or JS - UPDATED